# audiotk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  makefile  mypy.ini  pyproject.toml  setup.py
audiotk/: audiotk.py  cli.py  fmt_converter.py  guitartk.py  sample_organiser.py
audiotk/prototyping/: dependencies.ipynb  speech2text.ipynb
cli_tools/modules/: audiotk.py  imgtk.py  vidtk.py
tests/: test_imgtk.py
